# potatonet

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: echoclient.rs  echoserver.rs  ring.rs
examples/echoservice/: mod.rs
potatonet-bus/: Cargo.toml
potatonet-bus/src/: lib.rs  requests.rs  subscribes.rs
potatonet-client/: Cargo.toml
potatonet-client/src/: lib.rs
potatonet-codegen/: Cargo.toml
potatonet-codegen/src/: lib.rs
potatonet-common/: Cargo.toml
potatonet-common/src/: bus_message.rs  error.rs  events.rs  id.rs  lib.rs  request.rs
potatonet-node/: Cargo.toml
potatonet-node/src/: app.rs  context.rs  lib.rs  node.rs  service.rs
potatonet-node/tests/: service.rs  test_client.rs
potatonet-service-logger/: Cargo.toml
potatonet-service-logger/src/: lib.rs  macros.rs  mongo_backend.rs  stdout_backend.rs
src/: lib.rs
tests/: service.rs  test_client.rs  test_service.rs
