[package]
name = "potatonet"
version = "0.4.2"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[features]
default = ["bus", "client", "codegen", "node"]
bus = ["potatonet-bus"]
client = ["potatonet-client"]
codegen = ["potatonet-codegen"]
node = ["potatonet-node"]

[dependencies]
potatonet-common = { version = "0.4.2", path = "potatonet-common" }
potatonet-bus = { version = "0.4.1", path = "potatonet-bus", optional = true }
potatonet-client = { version = "0.4.1", path = "potatonet-client", optional = true }
potatonet-codegen = { version = "0.4.1", path = "potatonet-codegen", optional = true }
potatonet-node = { version = "0.4.2", path = "potatonet-node", optional = true }
serde = "1.0.104"
serde_derive = "1.0.104"
async-std = { version = "1.4.0", features = ["attributes"] }
futures = "0.3.1"
async-trait = "0.1.22"

[dev-dependencies]
linefeed = "0.6.0"
clap = "2.33.0"

[workspace]
members = [
    "potatonet-common",
    "potatonet-codegen",
    "potatonet-bus",
    "potatonet-node",
    "potatonet-client",
    "potatonet-service-logger"
]
