[package]
name = "potatonet-client"
version = "0.2.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
potatonet-common = { version = "0.2.0", path = "../potatonet-common" }
async-std = { version = "1.4.0", features = ["attributes"] }
async-trait = "0.1.22"
serde = "1.0.104"
serde_derive = "1.0.104"
futures = "0.3.1"
anyhow = "1.0.26"
