[package]
name = "potatonet-client"
version = "0.3.4"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[dependencies]
potatonet-common = { version = "0.3.4", path = "../potatonet-common" }
async-std = { version = "1.4.0", features = ["attributes"] }
async-trait = "0.1.22"
serde = "1.0.104"
serde_derive = "1.0.104"
futures = "0.3.1"
anyhow = "1.0.26"
