[package]
name = "potatonet-client"
version = "0.4.0"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[dependencies]
potatonet-common = { version = "0.4.0", path = "../potatonet-common" }
async-std = { version = "1.4.0", features = ["attributes", "unstable"] }
async-trait = "0.1.22"
serde = "1.0.104"
serde_derive = "1.0.104"
futures = "0.3.1"
anyhow = "1.0.26"
slab = "0.4.2"
bytes = { version = "0.5.3", features = ["serde"] }
log = "0.4.8"
