[package]
name = "potatonet-codegen"
version = "0.3.4"
authors = ["sunli"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
syn = { version = "1.0.13", features = ["full"] }
quote = "1.0.2"
