[package]
name = "potatonet-common"
version = "0.3.1"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
bytes = { version = "0.5.3", features = ["serde"] }
rmp-serde = "0.14.0"
anyhow = "1.0.26"
futures = "0.3.1"
async-trait = "0.1.22"
thiserror = "1.0.9"
