[package]
name = "potatonet-node"
version = "0.4.0"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[dependencies]
potatonet-common = { version = "0.4.0", path = "../potatonet-common" }
potatonet-codegen = { version = "0.4.0", path = "../potatonet-codegen" }
potatonet-client = { version = "0.4.0", path = "../potatonet-client" }
async-trait = "0.1.22"
anyhow = "1.0.26"
futures = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
rmp-serde = "0.14.0"
log = "0.4.8"
bytes = { version = "0.5.3", features = ["serde"] }
async-std = { version = "1.4.0", features = ["attributes", "unstable"] }
