[package]
name = "potatonet-service-logger"
version = "0.3.2"
authors = ["Sunli <scott_s829@163.com>"]
description = "PotatoNet is a lightweight microservices framework."
edition = "2018"
publish = true
license = "MIT"
homepage = "https://github.com/sunli829/potatonet"
repository = "https://github.com/sunli829/potatonet"
keywords = ["rpc", "network", "macroservice"]
categories = ["network-programming"]

[dependencies]
potatonet-node = { version = "0.3.2", path = "../potatonet-node" }
potatonet-codegen = { version = "0.3.2", path = "../potatonet-codegen" }
serde = "1.0.104"
rmpv = { version = "0.4.3", features = ["with-serde"] }
mongodb = "0.9.0"
bson = "0.14.0"
chrono = { version = "0.4.10", features = ["serde"] }
